--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
   pointer-events: none;
 }
 .select-box header{
+  text-align: center;
   font-size: 30px;
   font-weight: 600;
   padding-bottom: 10px;
